fix(hero): adjust font size of description for better readability

--- a/components/sections/Hero/index.scss
+++ b/components/sections/Hero/index.scss
@@ -79,7 +79,7 @@
   &__description {
     max-width: 35vw;
     margin-bottom: 1rem;
-    font-size: 2vw;
+    font-size: 1.75vw;
     letter-spacing: 0.5vw;
     font-weight: 700;
     font-style: italic;
